# mcl

./: CLAUDE.md  README.md  flake.nix  mcl.cabal  stack.yaml
src/Data/: Graph.hs
src/Data/Graph/: Base.hs  Markov.hs  Sparse.hs
test/: Main.hs  Spec.hs
test/Data/: GraphSpec.hs  TestOrphans.hs
test/Data/Graph/: MarkovSpec.hs  SparseSpec.hs
