name:          mcl
version:       0.1
cabal-version: >=1.8
build-type:    Simple
license:       MIT
license-file:  LICENSE
maintainer:    Edgar Gomes de Araujo
stability:     experimental
homepage:
package-url:
bug-reports:   talktoedgar@gmail.com
synopsis:      Markov Cluster Algorithm
description:
  Markov Cluster Algorithm, a fast and scalable unsupervised cluster algorithm for graphs

category:      Math
author:        Edgar Gomes de Araujo

library
  build-depends:
      base                  >=4       && <5
    , containers            >=0.4.2.1
    , deepseq               >=1.2
    , hashable              >=1.2
    , parallel              >=3.0
    , random                >=1.0
    , unordered-containers  >=0.2
    , vector                >=0.10
    , vector-algorithms     >=0.5

  exposed-modules:
    Data.Graph.Base
    Data.Graph.Markov
    Data.Graph.Sparse

  other-modules:
  exposed:         True
  buildable:       True
  hs-source-dirs:  src
  ghc-options:     -O2 -Wall -funbox-strict-fields -fprof-auto -fprof-cafs

test-suite spec
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:
    Data.Graph.MarkovSpec
    Data.Graph.SparseSpec
    Data.GraphSpec

  build-depends:
      base
    , containers
    , hashable
    , hspec
    , mcl
    , QuickCheck
    , unordered-containers
    , vector

  ghc-options:    -Wall
